All functionality implemented - (first) draft of elm-simplify demo website complete.
Things to consider/test:

  * currently simplification is done only on sliders last value - that
    is not during sliding. Simplify.js does this, but Elm's version
    seems at present too slow for this ...

  * Simplification timing - not sure how accurate that is, I should try
    out elm-benchmark and compare the results.

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -103,7 +103,8 @@ a:hover {
 	right: 25px;
 	top: 25px;
 	padding: 5px 10px 5px 5px;
-	border: 1px solid #ddd;
+  border: 1px solid #ddd;
+  z-index: 100;
 
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
